# rose-result

./: CMakeLists.txt  README.md  conanfile.py
include/rose/: result.hpp
test/: result_test.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
